      symbol problem.  Patched by Guido Guenther <agx@debian.org>
      (Closes: #178645)
    - debian/patches/locales-supported.dpatch: This dpatch addes many
      locales especially for UTF-8 and ISO-8859-15, to display debconf
      locale menu using SUPPORTED.orig.
      (Closes: #135334, #154556, #177472, #99623, #130517)

 -- GOTO Masanori <gotom@debian.or.jp>  Sat,  8 Feb 2003 22:08:59 +0900

glibc (2.3.1-11) unstable; urgency=low

  * GOTO Masanori <gotom@debian.or.jp>
    - debian/libc/DEBIAN/preinst: Fix silly bug at parisc64 kernel version
      check, replace from $ver to $kernel_ver. (Closes: #178159, #178217)
    - debian/patches/glibc23-cmov.dpatch: Fix hwcap inappropriate handling 
      not to load CMOV libraries (/*/lib/i686/cmov/) on VIA C3 architecture.
    - debian/patches/libgcc-compat-mips.dpatch: Fix undefined some symbols
      like __umoddi3 to export libgcc compat symbol.  Patched by
      Guido Guenther <agx@debian.org>.
    - debian/patches/0list: Disabled ldso-disable-hwcap.dpatch because
      (1) -opt is not provided currently, (2) disabling hwcap is not good
      way whether -opt package is installed or not.

 -- GOTO Masanori <gotom@debian.or.jp>  Wed, 22 Jan 2003 22:17:45 +0900

glibc (2.3.1-10) unstable; urgency=low

  * The "trudging the sludge" release.

  * GOTO Masanori <gotom@debian.or.jp>
    - debian/packages.d/glibc-doc.mk: install linuxthreads/man/*.man
      manpages into glibc-doc package. (Closes: #155794)
    - debian/libc/DEBIAN/preinst: add kernel version check compared with
      2.4.19-pa17 on parisc64. Suggested by Randolph Chung.
    - debian/libc/DEBIAN/preinst: add kernel version requirement for
      2.5.53-pa3 in 2.5 series kernel on parisc64.
    - debian/locales/DEBIAN/config, debian/locales/DEBIAN/templates:
      add translated selection "Leave alone" and "None" because such strings
      were hardcoded and could not be localized in the templates file.