@@ -10,6 +10,8 @@ glibc (2.3.1-12) unstable; urgency=low
       locales especially for UTF-8 and ISO-8859-15, to display debconf
       locale menu using SUPPORTED.orig.
       (Closes: #135334, #154556, #177472, #99623, #130517)
+    - debian/packages.d/glibc-doc.mk: add pthread_{getspecific, key_delete,
+      setspecific} manpage symlinks to pthread_key_create. (Closes: #99530)
 
  -- GOTO Masanori <gotom@debian.or.jp>  Sat,  8 Feb 2003 22:08:59 +0900
 
